# universal-portal

./: Makefile  README.md  dune  dune-project  jest.config.js  package-lock.json  package.json  universal-portal.opam  universal-portal.opam.template  webpack.config.js
.husky/: pre-commit
demo/client/: app.re  dune
demo/server/: dune  server.re
demo/shared/js/: dune
demo/shared/native/: App.re  dune
